Integração Api/MS

--- a/ms-notific/src/main/resources/application.properties
+++ b/ms-notific/src/main/resources/application.properties
@@ -21,3 +21,5 @@ spring.rabbitmq.queue=ms.email
 
 logging.level.com.ms.notific = TRACE
 #logging.level.root = DEBUG
+
+spring.main.allow-bean-definition-overriding=true
