--- a/ApiBus/src/main/resources/application.properties
+++ b/ApiBus/src/main/resources/application.properties
@@ -9,18 +9,23 @@ server.port = 8081
 # spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 # spring.jpa.hibernate.ddl-auto=update
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/apiBus
+spring.datasource.username=postgres
+spring.datasource.password=12345
+spring.jpa.hibernate.ddl-auto=update
+
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/api-docs
 
 # INFORMAÃ‡Ã•ES PARA CONEXÃƒO COM O BANCO DE DADOS H2
- spring.datasource.url=jdbc:h2:mem:testdb
- spring.datasource.driverClassName=org.h2.Driver
- spring.datasource.username=sa
- spring.datasource.password=password
- spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
- spring.h2.console.enabled=true
+# spring.datasource.url=jdbc:h2:mem:testdb
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=password
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# spring.h2.console.enabled=true
 
 # CONFIGURAÇÕES SPRINGSECURITY
-spring.security.oauth2.client.registration.google.client-id=373554730900-ol291d4cp9g2hd39qd128rs0rjfclq38.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
-logging.level.org.springframework.security=TRACE
+# spring.security.oauth2.client.registration.google.client-id=373554730900-ol291d4cp9g2hd39qd128rs0rjfclq38.apps.googleusercontent.com
+# spring.security.oauth2.client.registration.google.client-secret=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
+# logging.level.org.springframework.security=TRACE
