--- a/ApiBus/src/main/resources/application.properties
+++ b/ApiBus/src/main/resources/application.properties
@@ -2,15 +2,15 @@
 server.port = 8081
 
 # INFORMAÇÕES PARA CONEXÃO COM O BANCO DE DADOS POSTGRESQL
-spring.datasource.url=jdbc:postgresql://msdb.c2teosvjzoev.us-east-2.rds.amazonaws.com:5432/msdb
-spring.datasource.username=postgres
-spring.datasource.password=ms123456
-spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.url=jdbc:postgresql://msdb.c2teosvjzoev.us-east-2.rds.amazonaws.com:5432/msdb
+# spring.datasource.username=postgres
+# spring.datasource.password=ms123456
+# spring.jpa.hibernate.ddl-auto=update
 
-#spring.datasource.url=jdbc:postgresql://localhost:5432/apiBus
-#spring.datasource.username=postgres
-#spring.datasource.password=12345
-#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/apiBus
+spring.datasource.username=postgres
+spring.datasource.password=12345
+spring.jpa.hibernate.ddl-auto=update
 
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/api-docs
@@ -20,3 +20,4 @@ springdoc.api-docs.path=/api-docs
 # spring.security.oauth2.client.registration.google.client-secret=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
 # logging.level.org.springframework.security=TRACE
 
+api.security.token.secret=${JWT_SECRET:my-secret-key}
